fix alignment of suggestion menu

--- a/styles/spell-styles.css
+++ b/styles/spell-styles.css
@@ -15,7 +15,9 @@
 
 /*typeahead*/
 .tt-menu {
-	background-color: #ccc;
+	margin-left: 0px;
+	margin-top: 50px;
+
 }
 .tt-suggestion {
 	background-color: #339;
